--- a/Content Expansion/Stardew Valley Expanded/[CP] Stardew Valley Expanded/config.json
+++ b/Content Expansion/Stardew Valley Expanded/[CP] Stardew Valley Expanded/config.json
@@ -26,7 +26,7 @@
   "LowMemoryHighlands": "false",
   "OlderSophiaPortraits": "false",
   "VanillaSandyPortraits": "false",
-  "MatureEvents": "false",
+  "MatureEvents": "true",
   "ShorterPathToBlueMoonVineyard": "false",
   "UseGaldoranThemeAllTimes": "false",
   "DisableGaldoranTheme": "false"
